--- a/index.html
+++ b/index.html
@@ -46,12 +46,10 @@
     <main class="prueba2">
         <div class="text-index">
             <h2 class="title-index">Lo que necesites para decorar tu embarcación</h2>
-            <p class="text-rudder">Así como existen embarcaciones de estilo clásico, moderno y actual, diseñadas y
-                construidas por los diferentes astilleros, también se van creando y generando nuevas tendencias para la
-                decoración de las mismas a través de innovadores materiales.</p>
+            <p class="text-rudder">Así como existen embarcaciones de estilo clásico, moderno y actual, diseñadas y construidas por los diferentes astilleros, también se van creando y generando nuevas tendencias para la decoración de las mismas a través de innovadores materiales.</p>
         </div>
     </main>
+    <footer></footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     </body>
-
 </html>
